Fixes vh inconsistency on mobile (#32)
* Attempts to fix vh problem by removing height from useViewHeight dependencies

* Separate vh solution by fixing vh calc on title and GoL to use calc

* Attempts to prevent vh movement by switching title and GoL only to regular vh

* Removes vh where possible and reorganizes styling to prevent navbar from overlapping titles at small widths

--- a/styles/components/portfolio.module.scss
+++ b/styles/components/portfolio.module.scss
@@ -2,10 +2,10 @@
 @use '../partials/breakpoints';
 
 .section {
-  min-height: calc(var(--vh, 1vh) * 75);
+  min-height: 40rem;
 
   @media screen and (min-width: breakpoints.$large) {
-    height: 646px;
+    height: 40rem;
   }
 
   .card {
@@ -27,7 +27,7 @@
     }
 
     .site_image {
-      height: calc(var(--vh, 1vh) * 25);
+      height: 13.5rem;
       margin: 0 4%;
 
       @media screen and (min-width: breakpoints.$large) {
